# futodds

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Anchor.toml  README.md  TO-DO-Website.md  TODO-WEB.md  architecture-diagram.html  contracts-architecture.html
app/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
app/src/: App.tsx  backofficeModel.test.ts  backofficeModel.ts  main.tsx  solanaBackoffice.test.ts  solanaBackoffice.ts  styles.css  testnetOracle.test.ts  testnetOracle.ts  vite-env.d.ts
backend/: .env.example  AGENT.md  PRD.md  TODO.md  package-lock.json  package.json  pnpm-lock.yaml
backend/scripts/: txline-activate-devnet.js
backend/src/: appConfig.js  config.js  leagues.js  logger.js  oddsPoller.js  server.js  settlementWorker.js  solana.js  store.js  txlineClient.js  txlineOdds.js  (+1 more)
docs/: TECHNICAL-DOCUMENTATION.md  aws-deploy-backend-data.md  deploy-testnet-oracle.md  fase-0-oracle.md  fase-1a-place-bet.md  fase-1b-settle-bet.md  fase-1c-backend-realtime-oracle.md  fase-2a-pool-deposit.md  fase-2b-pool-integration.md  fase-2c-withdraw-fees.md  fase-3a-dynamic-payout.md  fase-3b-exposure-limit.md  fase-3c-cancel-bet.md  localnet.md  phase-2-flow.html  reset-localnet-setup.md
mobile-seeker/: .gitignore  AGENT.md  ARCHITECTURE.md  PRD.md  README.md  TODO-ONBOARDING.md  TODO.md  brand.md  settings.gradle.kts
programs/betting-engine/: Cargo.toml
programs/betting-engine/src/: lib.rs
programs/betting-engine/tests/: test_betting.rs
web-investor/: TODO.md
website/: .env.example  package-lock.json  package.json
(+103 files in other folders)
